--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -14,7 +14,7 @@
         <div class="section-inner clearfix">
             <nav>
                 <a href="/">The Top Sights of Abbotsford</a>               
-             
+                <a href="{% url 'blog_login' %}">Login</a></p>
            </nav>
         </div>
     </div>
